--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "babel-preset-more-optimization",
   "version": "0.0.0",
   "description": "Babel preset for additional optimization/minification.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "prepublish": "babel src --ignore __tests__ --out-dir dist",
     "test": "jest"
   },
   "repository": {
@@ -20,6 +21,12 @@
   },
   "homepage": "https://github.com/erikdesjardins/babel-preset-more-optimization#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-register": "^6.26.0",
     "jest": "^21.1.0"
   }
 }
