--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ node_js:
   - 8
   - 6
   - 4
-script: npm test
+script:
+  - npm run coverage
+  - npm run report-coverage
 branches:
   only:
     - master
