--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "prepublish": "babel src --ignore __tests__ --out-dir dist",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "report-coverage": "coveralls < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-register": "^6.26.0",
+    "coveralls": "^2.13.1",
     "jest": "^21.1.0"
   }
 }
