--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepublish": "babel src --ignore __tests__ --out-dir dist",
     "test": "jest",
     "watch": "jest --watch",
-    "coverage": "jest --coverage",
+    "coverage": "jest --coverage --collectCoverageFrom=src/**/*.js",
     "report": "coveralls < coverage/lcov.info"
   },
   "repository": {
