transform default params for node 4

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babel-register": "^6.26.0",
     "coveralls": "^2.13.1",
     "jest": "^21.1.0"
